cmake_minimum_required(VERSION 3.1)
project(fuse_od_source C)

set(CMAKE_C_STANDARD 11)

include_directories(/home/vitaly/CLionProjects/libspectrum-od-source/libspectrum-install/include)
#include_directories(/opt/gcw0-toolchain/usr/mipsel-gcw0-linux-uclibc/sysroot/usr/include/glib-2.0)
#include_directories(/opt/gcw0-toolchain/usr/include/glib-2.0)
include_directories(/opt/gcw0-toolchain/usr/mipsel-gcw0-linux-uclibc/sysroot/usr/include/glib-2.0)
include_directories(/opt/gcw0-toolchain/usr/mipsel-gcw0-linux-uclibc/sysroot/usr/lib/glib-2.0/include)
include_directories(/opt/gcw0-toolchain/usr/mipsel-gcw0-linux-uclibc/sysroot/usr/include/SDL)

include_directories(.)
include_directories(compat)
include_directories(controlmapping)
include_directories(debugger)
include_directories(infrastructure)
include_directories(machines)
include_directories(peripherals)
include_directories(peripherals/disk)
include_directories(peripherals/flash)
include_directories(peripherals/ide)
include_directories(peripherals/nic)
include_directories(pokefinder)
include_directories(savestates)
include_directories(sound)
include_directories(timer)
include_directories(ui)
include_directories(ui/fb)
include_directories(ui/gtk)
include_directories(ui/scaler)
include_directories(ui/sdl)
include_directories(ui/widget)
include_directories(ui/wii)
include_directories(ui/win32)
include_directories(ui/xlib)
include_directories(unittests)
include_directories(z80)

add_executable(fuse_od_source
        compat/amiga/osname.c
        compat/amiga/paths.c
        compat/linux/dir.c
        compat/linux/paths.c
        compat/linux/regex.c
        compat/linux/relative_paths.c
        compat/morphos/osname.c
        compat/unix/dir.c
        compat/unix/file.c
        compat/unix/osname.c
        compat/unix/paths.c
        compat/unix/relative_paths.c
        compat/unix/socket.c
        compat/unix/timer.c
        compat/unix/tuntap.c
        compat/wii/dir.c
        compat/wii/osname.c
        compat/wii/paths.c
        compat/wii/timer.c
        compat/win32/osname.c
        compat/win32/paths.c
        compat/win32/socket.c
        compat/win32/timer.c
        compat/dirname.c
        compat/getopt.c
        compat/getopt.h
        compat/getopt1.c
        controlmapping/controlmapping.c
        controlmapping/controlmapping.h
        controlmapping/controlmappingsettings.c
        controlmapping/controlmappingsettings.h
        debugger/breakpoint.c
        debugger/breakpoint.h
        debugger/command.c
        debugger/commandl.c
        debugger/commandy.c
        debugger/commandy.h
        debugger/debugger.c
        debugger/debugger.h
        debugger/debugger_internals.h
        debugger/disassemble.c
        debugger/event.c
        debugger/expression.c
        debugger/system_variable.c
        debugger/variable.c
        infrastructure/startup_manager.c
        infrastructure/startup_manager.h
        machines/machines.h
        machines/machines_periph.c
        machines/machines_periph.h
        machines/pentagon.c
        machines/pentagon.h
        machines/pentagon1024.c
        machines/pentagon512.c
        machines/scorpion.c
        machines/scorpion.h
        machines/spec128.c
        machines/spec128.h
        machines/spec16.c
        machines/spec48.c
        machines/spec48.h
        machines/spec48_ntsc.c
        machines/spec_se.c
        machines/specplus2.c
        machines/specplus2a.c
        machines/specplus3.c
        machines/specplus3.h
        machines/specplus3e.c
        machines/tc2048.c
        machines/tc2068.c
        machines/tc2068.h
        machines/ts2068.c
        peripherals/disk/beta.c
        peripherals/disk/beta.h
        peripherals/disk/crc.c
        peripherals/disk/crc.h
        peripherals/disk/didaktik.c
        peripherals/disk/didaktik.h
        peripherals/disk/disciple.c
        peripherals/disk/disciple.h
        peripherals/disk/disk.c
        peripherals/disk/disk.h
        peripherals/disk/fdd.c
        peripherals/disk/fdd.h
        peripherals/disk/opus.c
        peripherals/disk/opus.h
        peripherals/disk/plusd.c
        peripherals/disk/plusd.h
        peripherals/disk/trdos.c
        peripherals/disk/trdos.h
        peripherals/disk/upd_fdc.c
        peripherals/disk/upd_fdc.h
        peripherals/disk/wd_fdc.c
        peripherals/disk/wd_fdc.h
        peripherals/flash/am29f010.c
        peripherals/flash/am29f010.h
        peripherals/ide/divide.c
        peripherals/ide/divide.h
        peripherals/ide/divmmc.c
        peripherals/ide/divmmc.h
        peripherals/ide/divxxx.c
        peripherals/ide/divxxx.h
        peripherals/ide/ide.c
        peripherals/ide/ide.h
        peripherals/ide/simpleide.c
        peripherals/ide/simpleide.h
        peripherals/ide/zxatasp.c
        peripherals/ide/zxatasp.h
        peripherals/ide/zxcf.c
        peripherals/ide/zxcf.h
        peripherals/ide/zxmmc.c
        peripherals/ide/zxmmc.h
        peripherals/nic/enc28j60.c
        peripherals/nic/enc28j60.h
        peripherals/nic/w5100.c
        peripherals/nic/w5100.h
        peripherals/nic/w5100_internals.h
        peripherals/nic/w5100_socket.c
        peripherals/ay.c
        peripherals/ay.h
        peripherals/covox.c
        peripherals/covox.h
        peripherals/dck.c
        peripherals/dck.h
        peripherals/fuller.c
        peripherals/fuller.h
        peripherals/if1.c
        peripherals/if1.h
        peripherals/if2.c
        peripherals/if2.h
        peripherals/joystick.c
        peripherals/joystick.h
        peripherals/kempmouse.c
        peripherals/kempmouse.h
        peripherals/melodik.c
        peripherals/melodik.h
        peripherals/multiface.c
        peripherals/multiface.h
        peripherals/printer.c
        peripherals/printer.h
        peripherals/scld.c
        peripherals/scld.h
        peripherals/speccyboot.c
        peripherals/speccyboot.h
        peripherals/specdrum.c
        peripherals/specdrum.h
        peripherals/spectranet.c
        peripherals/spectranet.h
        peripherals/ttx2000s.c
        peripherals/ttx2000s.h
        peripherals/ula.c
        peripherals/ula.h
        peripherals/usource.c
        peripherals/usource.h
        pokefinder/pokefinder.c
        pokefinder/pokefinder.h
        pokefinder/pokemem.c
        pokefinder/pokemem.h
        savestates/savestates.c
        savestates/savestates.h
        sound/alsasound.c
        sound/aosound.c
        sound/blipbuffer.c
        sound/blipbuffer.h
        sound/coreaudiosound.c
        sound/dxsound.c
        sound/hpsound.c
        sound/nullsound.c
        sound/osssound.c
        sound/pulsesound.c
        sound/sdlsound.c
        sound/sfifo.c
        sound/sfifo.h
        sound/sunsound.c
        sound/wiisound.c
        sound/win32sound.c
        timer/native.c
        timer/sdl.c
        timer/timer.c
        timer/timer.h
        ui/fb/fbdisplay.c
        ui/fb/fbdisplay.h
        ui/fb/fbjoystick.c
        ui/fb/fbkeyboard.c
        ui/fb/fbkeyboard.h
        ui/fb/fbmouse.c
        ui/fb/fbmouse.h
        ui/fb/fbui.c
        ui/gtk/binary.c
        ui/gtk/browse.c
        ui/gtk/confirm.c
        ui/gtk/debugger.c
        ui/gtk/fileselector.c
        ui/gtk/gtkcompat.c
        ui/gtk/gtkcompat.h
        ui/gtk/gtkdisplay.c
        ui/gtk/gtkinternals.h
        ui/gtk/gtkjoystick.c
        ui/gtk/gtkkeyboard.c
        ui/gtk/gtkmouse.c
        ui/gtk/gtkui.c
        ui/gtk/memory.c
        ui/gtk/memory_gtk2.c
        ui/gtk/picture.c
        ui/gtk/pixmaps.c
        ui/gtk/pokefinder.c
        ui/gtk/pokemem.c
        ui/gtk/rollback.c
        ui/gtk/roms.c
        ui/gtk/statusbar.c
        ui/gtk/stock.c
        ui/null/null_ui.c
        ui/scaler/scaler.c
        ui/scaler/scaler.h
        ui/scaler/scaler_hq2x.c
        ui/scaler/scaler_hq3x.c
        ui/scaler/scaler_hq4x.c
        ui/scaler/scaler_internals.h
        ui/scaler/scalers.c
        ui/sdl/keysyms.c
        ui/sdl/sdldisplay.c
        ui/sdl/sdldisplay.h
        ui/sdl/sdlhotkeys.c
        ui/sdl/sdljoystick.c
        ui/sdl/sdljoystick.h
        ui/sdl/sdlkeyboard.c
        ui/sdl/sdlkeyboard.h
        ui/sdl/sdlui.c
        ui/widget/about.c
        ui/widget/binary.c
        ui/widget/browse.c
        ui/widget/controlmapping.c
        ui/widget/debugger.c
        ui/widget/error.c
        ui/widget/filesel.c
        ui/widget/memory.c
        ui/widget/menu.c
        ui/widget/menu_data.c
        ui/widget/options.c
        ui/widget/options_internals.h
        ui/widget/picture.c
        ui/widget/pokefinder.c
        ui/widget/pokemem.c
        ui/widget/query.c
        ui/widget/roms.c
        ui/widget/savestate_sel.c
        ui/widget/select.c
        ui/widget/text.c
        ui/widget/vkeyboard.c
        ui/widget/widget.c
        ui/widget/widget.h
        ui/widget/widget_internals.h
        ui/wii/wiidisplay.c
        ui/wii/wiidisplay.h
        ui/wii/wiijoystick.c
        ui/wii/wiikeyboard.c
        ui/wii/wiikeyboard.h
        ui/wii/wiikeysyms.h
        ui/wii/wiimouse.c
        ui/wii/wiimouse.h
        ui/wii/wiiui.c
        ui/win32/about.c
        ui/win32/about.h
        ui/win32/binary.c
        ui/win32/binary.h
        ui/win32/browse.c
        ui/win32/browse.h
        ui/win32/confirm.c
        ui/win32/debugger.c
        ui/win32/debugger.h
        ui/win32/fileselector.c
        ui/win32/hyperlinks.c
        ui/win32/hyperlinks.h
        ui/win32/memorybrowser.c
        ui/win32/memorybrowser.h
        ui/win32/picture.c
        ui/win32/picture.h
        ui/win32/pokefinder.c
        ui/win32/pokefinder.h
        ui/win32/pokemem.c
        ui/win32/pokemem.h
        ui/win32/rollback.c
        ui/win32/rollback.h
        ui/win32/roms.c
        ui/win32/roms.h
        ui/win32/select_template.h
        ui/win32/statusbar.c
        ui/win32/win32display.c
        ui/win32/win32internals.h
        ui/win32/win32joystick.c
        ui/win32/win32joystick.h
        ui/win32/win32keyboard.c
        ui/win32/win32mouse.c
        ui/win32/win32ui.c
        ui/xlib/xdisplay.c
        ui/xlib/xdisplay.h
        ui/xlib/xerror.c
        ui/xlib/xjoystick.c
        ui/xlib/xkeyboard.c
        ui/xlib/xkeyboard.h
        ui/xlib/xui.c
        ui/xlib/xui.h
        ui/hotkeys.h
        ui/ui.h
        ui/uidisplay.h
        ui/uijoystick.c
        ui/uijoystick.h
        ui/uimedia.h
        ui/vkeyboard.h
        unittests/unittests.c
        unittests/unittests.h
        z80/coretest.c
        z80/opcodes_base.c
        z80/z80.c
        z80/z80.h
        z80/z80_cb.c
        z80/z80_checks.h
        z80/z80_ddfd.c
        z80/z80_ddfdcb.c
        z80/z80_debugger_variables.c
        z80/z80_ed.c
        z80/z80_internals.h
        z80/z80_macros.h
        z80/z80_ops.c
        bitmap.h
        compat.h
        config.h
        display.c
        display.h
        event.c
        event.h
        fuse.c
        fuse.h
        input.c
        input.h
        keyboard.c
        keyboard.h
        loader.c
        loader.h
        machine.c
        machine.h
        memory_pages.c
        memory_pages.h
        mempool.c
        mempool.h
        menu.c
        menu.h
        module.c
        module.h
        movie.c
        movie.h
        movie_tables.h
        options.h
        periph.c
        periph.h
        phantom_typist.c
        phantom_typist.h
        profile.c
        profile.h
        psg.c
        psg.h
        rectangle.c
        rectangle.h
        rzx.c
        rzx.h
        screenshot.c
        screenshot.h
        settings.c
        settings.h
        slt.c
        slt.h
        snapshot.c
        snapshot.h
        sound.c
        sound.h
        spectrum.c
        spectrum.h
        svg.c
        svg.h
        tape.c
        tape.h
        ui.c
        uidisplay.c
        uimedia.c
        utils.c
        utils.h)
